--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
+    "ipykernel>=6.29.5",
+    "python-dotenv>=1.1.1",
     "telethon>=1.40.0",
 ]
