--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "ipykernel>=6.29.5",
+    "openai-agents>=0.2.3",
     "python-dotenv>=1.1.1",
     "telethon>=1.40.0",
 ]
