--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,7 @@ dependencies = [
     "openai-agents>=0.2.3",
     "python-dotenv>=1.1.1",
     "telethon>=1.40.0",
+    "requests>=2.28.0",
+    "pandas>=1.5.0",
+    "numpy>=1.21.0",
 ]
