--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,6 @@ dependencies = [
     "requests>=2.28.0",
     "pandas>=1.5.0",
     "numpy>=1.21.0",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.27",
 ]
